--- a/src/app.html
+++ b/src/app.html
@@ -12,7 +12,20 @@
   </header>
 
   <main>
-    <div class="content">Page content</div>
+    <div class="content-wrapper">
+      <div class="content">
+        <div class="collections">
+          <div class="collection add-collection">
+            <img src="./assets/images/icon-plus-gray-64x64.png">
+          </div>
+          <div class="collection">Лето 2023</div>
+          <div class="collection">Весна 2023</div>
+          <div class="collection">Новый год 2023</div>
+          <div class="collection">Зима 2023</div>
+          <div class="collection">Осень 2022</div>
+        </div>
+      </div>
+    </div>
   </main>
 
   <script type="text/javascript" src="app.js"></script>
