Created collections list view

--- a/src/app.html
+++ b/src/app.html
@@ -13,18 +13,7 @@
 
   <main>
     <div class="content-wrapper">
-      <div class="content">
-        <div class="collections">
-          <div class="collection add-collection">
-            <img src="./assets/images/icon-plus-gray-64x64.png">
-          </div>
-          <div class="collection">Лето 2023</div>
-          <div class="collection">Весна 2023</div>
-          <div class="collection">Новый год 2023</div>
-          <div class="collection">Зима 2023</div>
-          <div class="collection">Осень 2022</div>
-        </div>
-      </div>
+      <div class="content"></div>
     </div>
   </main>
 
